cabal-version:      2.4
name:               proc-gen-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
license-file:       LICENSE                    
author:             Will
maintainer:         wveatchw@gmail.com

library
    exposed-modules:  ProcGen

                    , ProcGen.Shape.Bezier

                    , ProcGen.Tree

                    , ProcGen.Turtle

    build-depends:    base ^>=4.18.2.0
                    , linear
                    , vector

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -W
                      -Wall
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wpartial-fields
                      -Werror=missing-home-modules
                      -Widentities
                      -Wredundant-constraints
                      -O2
